[gd_scene load_steps=29 format=2]

[ext_resource path="res://Enemies/Sapling/sapling.png" type="Texture" id=1]
[ext_resource path="res://Bullet/BulletPool.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Sapling/Sapling.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Sapling/leaf_light.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Sapling/leaf_dark.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Sapling/Leaf.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.5312
height = 2.13113

[sub_resource type="Animation" id=2]
resource_name = "attack_down"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_attack"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack_up"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_attack"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "recover_down"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_moving"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "recover_up"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_moving"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.25, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
}, {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.25, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
}, {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "attack_up"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "attack_down"

[sub_resource type="AnimationNodeBlendSpace1D" id=10]
blend_point_0/node = SubResource( 8 )
blend_point_0/pos = -0.01
blend_point_1/node = SubResource( 9 )
blend_point_1/pos = 0.01

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "recover_up"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "recover_down"

[sub_resource type="AnimationNodeBlendSpace1D" id=13]
blend_point_0/node = SubResource( 23 )
blend_point_0/pos = -0.01
blend_point_1/node = SubResource( 24 )
blend_point_1/pos = 0.01

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "run_down"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "run_up"

[sub_resource type="AnimationNodeBlendSpace1D" id=16]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = 0.01
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = -0.01

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
advance_condition = "attack"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=21]
states/attack/node = SubResource( 10 )
states/attack/position = Vector2( 265.044, 55.7635 )
states/recover/node = SubResource( 13 )
states/recover/position = Vector2( 10.2609, 240.565 )
states/run/node = SubResource( 16 )
states/run/position = Vector2( -29.7391, 78.8261 )
transitions = [ "run", "attack", SubResource( 17 ), "attack", "recover", SubResource( 18 ), "recover", "run", SubResource( 19 ), "recover", "attack", SubResource( 20 ) ]
start_node = "run"
graph_offset = Vector2( -291, 9 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[node name="Sapling" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 26
frame = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="LeafShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackDurationTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="BulletPool" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_down = SubResource( 2 )
anims/attack_up = SubResource( 3 )
anims/recover_down = SubResource( 4 )
anims/recover_up = SubResource( 5 )
anims/run_down = SubResource( 6 )
anims/run_up = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 22 )
parameters/conditions/attack = false
parameters/attack/blend_position = 0
parameters/recover/blend_position = 0.0
parameters/run/blend_position = 0.0

[node name="Leaves" type="Node2D" parent="."]

[node name="Leaf1" parent="Leaves" instance=ExtResource( 6 )]
position = Vector2( -12, -8 )
texture = ExtResource( 4 )

[node name="Leaf2" parent="Leaves" instance=ExtResource( 6 )]
position = Vector2( -5, -12 )
texture = ExtResource( 4 )

[node name="Leaf3" parent="Leaves" instance=ExtResource( 6 )]
position = Vector2( -3, -7 )
texture = ExtResource( 5 )

[node name="Leaf4" parent="Leaves" instance=ExtResource( 6 )]
position = Vector2( 7, -6 )
scale = Vector2( -1, 1 )
texture = ExtResource( 5 )

[node name="Leaf5" parent="Leaves" instance=ExtResource( 6 )]
position = Vector2( 10, 0 )
scale = Vector2( -1, 1 )
texture = ExtResource( 5 )

[node name="Leaf6" parent="Leaves" instance=ExtResource( 6 )]
position = Vector2( 14, -5 )
scale = Vector2( -1, 1 )
texture = ExtResource( 4 )
[connection signal="timeout" from="LeafShootTimer" to="." method="_on_LeafShootTimer_timeout"]
[connection signal="timeout" from="AttackDurationTimer" to="." method="_on_AttackDurationTimer_timeout"]
